test_suite/tests/ui/duplicate-attribute/rename-ser-rename-ser.stderr
error: duplicate serde attribute `rename`
 --> $DIR/rename-ser-rename-ser.rs:6:38
  |
6 |     #[serde(rename(serialize = "x"), rename(serialize = "y"))]
  |                                      ^^^^^^

error: aborting due to previous error

